What's new in hachoir-metadata 1.2.1?
=====================================

 * Using --raw, strings are not normalized (don't strip trailing space, new
   line, nul byte, etc.)
 * Extract much more informations from Microsoft Office documents (.doc, .xsl,
   .pps, etc.)
 * Improve OLE2 (Word) extractor
 * Fix ASF extractor for hachoir-parser 1.2.1

What's new in hachoir-metadata 1.2?
===================================

 * Create --maxlen option for hachoir-metadata program: --maxlen=0 disable
   the arbitrary string length limit
 * Create FLAC metadata extractor
 * Create hachoir_metadata.config, especially MAX_STR_LENGTH option
   (maximum string length)
 * GIF image may contains multiple comments

What's new in hachoir-metadata 1.1?
===================================

 * More extractors are more stable and fault tolerant
 * Create basic Gtk+ GUI: hachoir-metadata-gtk
 * Catch error on data conversion
 * Read width and height DPI for most image formats
 * JPEG (EXIF): read GPS informations
 * Each data item can has its own "setter"
 * Add more ID3 keys (TCOP, TDAT, TRDA, TORY, TIT1)
 * Create datetime filter supporting timezone
 * Add "meters", "pixels", "DPI" suffix for human display
 * Create SWF extractor
 * RIFF: read also informations from headers field, compute audio
   compression rate
 * MOV: read width and height
 * ASF: read album artist

What's new in hachoir-metadata 1.0?
===================================

Version 1.0.1
-------------

 * Only use hachoir_core.profiler with --profiler command line option
   so 'profiler' Python module is now optional
 * Set shebang to "#!/usr/bin/python"

Version 1.0
-----------

 * Real audio: read number of channel, bit rate, sample rate and
   compute compression rate
 * JPEG: Read user commment
 * Windows ANI: Read frame rate
 * Use Language from hachoir_core to store language from ID3 and MKV
 * OLE2 and FLV: Extractors are now fault tolerant

What's new in hachoir-metadata 0.10.0?