@@ -1,3 +1,8 @@
+What's new in hachoir-metadata XXX?
+===================================
+
+ * Create ISO image extractor
+
 What's new in hachoir-metadata 1.2.1?
 =====================================
 
